<resources>
    <string name="app_name">Facts Africa</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an Account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="i_have_read_and_understood_the_terms_and_conditions_stated_in_the_contract">I have read and understood the terms and conditions stated in the contract</string>
</resources>
